<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowResult">

    <TextView
        android:id="@+id/textStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="20px"
        android:text="@string/student_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>
    <TextView
        android:id="@+id/textScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginTop="20px"
        android:layout_marginBottom="20px"
        android:text="@string/score"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textStudent">

    </TextView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20px"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_result"
        app:layout_constraintTop_toBottomOf="@+id/textScore"
        app:layout_constraintVertical_bias="0.26"
        tools:layout_editor_absoluteX="0dp">

        <TableLayout
            android:id="@+id/tableResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:stretchColumns="*" />
    </ScrollView>

    <Button
        android:id="@+id/btn_save_result"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/green_rounded_corner_filled"
        android:text="@string/save_result"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>