<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentList">

        <Button
            android:id="@+id/btn_add_from_item_bank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/green_rounded_corner_filled"
            android:text="@string/add_from_item_bank"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintWidth_default="spread" />

        <Button
            android:id="@+id/btn_save_exam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/green_rounded_corner_filled"
            android:text="@string/save"
            android:enabled="false"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintWidth_default="spread" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/swift_green"
            android:minHeight="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/item_list"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/item_list"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRecyclerViewExamItems"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout10"
            tools:layout_editor_absoluteX="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>